fix blue spilling over outside of #sitemenu

--- a/dpu-core-rb.scss
+++ b/dpu-core-rb.scss
@@ -1977,7 +1977,7 @@ body.theme-new-core {
   }
   }*/
 
-	#navbarCollapse,
+
 	#sitemenu {
 		background: #125496;
 	}
